@@ -177,10 +177,21 @@ Retrieve the Penny Arcade strip for a given index:
 
 </DL>
 
+<P>
+
 Retrieve Calvin and Hobbes strips from a given index going backwards to
-the beginning until an existing file is found:
+the beginning.
 <DL COMPACT><DT><DD>
 <B>dosage -a calvinandhobbes:20120722</B>
+
+</DL>
+
+<P>
+
+On Unix, <B><A HREF="../man1/xargs.1.html">xargs</A>(1)</B> can download several comic strips in parallel,
+for example using up to 4 processes:
+<DL COMPACT><DT><DD>
+<B>cd Comics &amp;&amp; find . -type d | xargs -n1 -P4 dosage -b . -v</B>
 
 </DL>
 
